--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,24 @@
 <html lang="">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <meta name="author" content="Sjors van Holst">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <meta name="copyright" content="Corvus Consultancy">
+    <meta name="description" content="Providing innovative and cutting-edge solutions from a multi-disciplinary perspective, tailor made for your company.">
+
+    <title>Corvus Consultancy</title>
+
+    <!-- Generated using https://realfavicongenerator.net/ -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    
+    <meta name="msapplication-TileColor" content="#b91d47">
+    <meta name="theme-color" content="#ffffff">    
   </head>
   <body>
     <noscript>
